<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_item_import_questions"
            android:checked="true"
            android:icon="@drawable/ic_import"
            android:title="@string/import_questions" />
        <item
            android:id="@+id/nav_item_sync_from_server"
            android:checked="true"
            android:icon="@drawable/ic_sync"
            android:title="@string/sync_from_server" />
        <item
            android:id="@+id/nav_item_upload_Questions"
            android:checked="true"
            android:icon="@drawable/ic_file_upload"
            android:title="@string/upload_questions" />
        <item
            android:id="@+id/nav_item_logout"
            android:checked="true"
            android:icon="@drawable/ic_power_settings_new_24px"
            android:title="@string/logout" />

    </group>

    <item android:title="@string/communication">
        <menu>

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_24px"
                android:title="@string/about_us"/>
            <item
                android:id="@+id/nav_app_ifo"
                android:icon="@drawable/ic_info"
                android:title="@string/app_info"/>
        </menu>

    </item>


</menu>