<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grd_netflix"
    android:theme="@style/AppTheme.NoActionBar">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.pixplicity.fontview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="12dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:pix_font="fonts/streatwear.otf" />

        <com.pixplicity.fontview.FontTextView
            android:id="@+id/et_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:text="Version 1.0.0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:pix_font="fonts/Ubuntu-R.ttf" />

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_foreground" />

        <com.pixplicity.fontview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/copyright_spark"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:pix_font="fonts/Ubuntu-R.ttf" />

        <com.pixplicity.fontview.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/all_rights_reserved"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:pix_font="fonts/Ubuntu-R.ttf" />

    </LinearLayout>

</RelativeLayout>
